--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,19 @@
-<!DOCTYPE html>
-<html>
+<html lang="en-US">
 <head>
-  <title>Template</title>
+  <title>Weather</title>
 </head>
 <body>
-  
+  <div class="container">
+    <h1>Get Weather Conditions From Anywhere!</h1>
+    <label for="location">Enter a location:</label>
+    <input id="location" type="text">
+    <button class="btn-success" id="weatherLocation">Get Current Temperature and Humidity</button>
+    <div class="showErrors"></div>
+    <div class="showHumidity"></div>
+    <div class="showCurrentTemp"></div>
+    <div class="showHiLoTemp"></div>
+    <div class="showWind"></div>
+    <div class="showClouds"></div>
+  </div>
 </body>
 </html>
