--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     <button class="btn-success" id="weatherLocation">Get Current Temperature and Humidity</button>
     <div class="showErrors"></div>
     <div class="showHumidity"></div>
-    <div class="showCurrentTemp"></div>
+    <div class="showTemp"></div>
     <div class="showHiLoTemp"></div>
     <div class="showWind"></div>
     <div class="showClouds"></div>
